back end and front end updates