@@ -2,7 +2,6 @@ package com.codetest.rest;
 
 import java.util.List;
 
-import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
@@ -14,28 +13,21 @@ import javax.ws.rs.core.Response.Status;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import org.springframework.web.bind.annotation.CrossOrigin;
 
 import com.codetest.model.Student;
 import com.codetest.model.Subject;
 import com.codetest.service.StudentSubjectService;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 @Component
-@Path("")
+@Path("studentsubjectrest")
 public class StudentSubjectRest{
 	
 	private static final String APOST_REG = "(”|“)";
 
 	@Autowired
 	private StudentSubjectService studentSubjectService;
-	
-	@GET
-	@Path("")
-	public String hello() {
-		return "";
-	}
 	
 	@GET
 	@Path("/getAllSubjects")
@@ -48,7 +40,7 @@ public class StudentSubjectRest{
 	@Path("/getStudentsforSubject/{id}")
 	@Produces(MediaType.APPLICATION_JSON)
 	public List<Student> getStudentsforSubject(@PathParam("id") String id) {
-		if(id==null||id.isBlank())
+		if(id==null||id.trim().isEmpty())
 			return null;
 		return studentSubjectService.getAllStudentsForSubject(id);
 	}
@@ -56,10 +48,10 @@ public class StudentSubjectRest{
 	@POST
 	@Path("/ingest")
 	public Response ingest(String jsonInput) {
-		if(jsonInput==null||jsonInput.isBlank())
+		if(jsonInput==null||jsonInput.trim().isEmpty())
 			return Response.status(Status.BAD_REQUEST).build();
 		
-		String sanitized = jsonInput.replaceAll("(”|“)", "\"");
+		String sanitized = jsonInput.replaceAll(APOST_REG, "\"");
 		
 		Student student = null;
 		try {
